--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/logo.PNG" class="logo">
+                <img src="/assets/images/logo.PNG" class="logo">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="../../Downloads/25aa3f03-773d-4837-9798-7807108af2d7.JPG">
+                    <img src="/assets/images/25aa3f03-773d-4837-9798-7807108af2d7.JPG">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title ">About Me</h1>
@@ -136,7 +136,7 @@
             <h1 class="sub-title ">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="../../Downloads/images/work-1.png">
+                    <img src="/assets/images/work-1.png">
                     <div class="layer">
                         <h3>Social Media App</h3>
                         <p>This website is a concept for a new social media app.</p>
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="work">
-                    <img src="../../Downloads/images/work-2.png">
+                    <img src="/assets/images/work-2.png">
                     <div class="layer">
                         <h3>Music App</h3>
                         <p>This website is a concept for a new music app.</p>
@@ -154,7 +154,7 @@
                 </div>
 
                 <div class="work">
-                    <img src="../../Downloads/images/work-3.png">
+                    <img src="/assets/images/work-3.png">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
                         <p>This website is a concept for a new online shopping app.</p>
