--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title ">About Me</h1>
-                    <p>I am a Full-Stack Developer with a passion for creating beautiful and 
-                        functional websites. I have a Bachelor's Degree in Computer Science from t
-                        he University of Texas at Dallas. I am currently working as a freelance developer and 
-                        I am always interested in a challenge.</p>
+                    <p>I am a Full-Stack Developer that enjoys building attractive and functioning 
+                        websites. I am now working on my Bachelor of Science in Computer Science at 
+                        The University of Texas at Dallas. I presently work as a freelance developer and 
+                        am always looking for new challenges.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
@@ -66,15 +66,15 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>Freelance Web Developer</span><br>2021 - Present</li>
-                            <li><span>Software Engineer Intern</span><br>2021 - Present</li>
-                            <li><span>Software Engineer Intern</span><br>2020 - 2021</li>
+                            <li><span>Freelance Mobile App Developer</span><br>2021 - Present</li>
+                            <li><span>Freelance Database Manager</span><br>2021 - Present</li>
+                            <li><span>Freelance AI Developer</span><br>2021 - Present</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>University of Texas at Dallas</span><br>Bachelor's Degree in Computer Science</li>
-                            <li><span>University of Texas at Dallas</span><br>Master's Degree in Computer Science</li>
                         </ul>
                     </div>
 
