--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/zaineelmithani.github.io/assets/images/IMG_3091.png">
+                    <img src="/zaineelmithani.github.io/assets/images/25aa3f03-773d-4837-9798-7807108af2d7.JPG">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title ">About Me</h1>
