--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="/zaineelmithani.github.io/assets/images/25aa3f03-773d-4837-9798-7807108af2d7.JPG">
+                    <img src="/zaineelmithani.github.io/assets/images/IMG_3173.jpg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title ">About Me</h1>
@@ -50,6 +50,7 @@
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
                         <p class="tab-links" onclick="openTab('experience')">Experience</p>
                         <p class="tab-links" onclick="openTab('education')">Education</p>
+                        <p class="tab-links" onclick="openTab('Certifications')">Certifications</p>
                     </div>
 
                     <div class="tab-contents active-tab" id="skills">
@@ -75,6 +76,13 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>University of Texas at Dallas</span><br>Bachelor's Degree in Computer Science</li>
+                        </ul>
+                    </div>
+
+                    <div class="tab-contents" id="Certifications">
+                        <ul>
+                            <li><span>AWS (Amazon Web Services)</span><br>Cloud Practitioner</li>
+                            <li><span>Kodekloud</span><br>Kubernetes Course</li>
                         </ul>
                     </div>
 
