added links to my certificates

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title ">About Me</h1>
-                    <p>I am a Full-Stack Developer that enjoys building attractive and functioning 
-                        websites. I am now working on my Bachelor of Science in Computer Science at 
-                        The University of Texas at Dallas. I presently work as a freelance developer and 
-                        am always looking for new challenges.</p>
+                    <p>I am a full-stack developer who enjoys creating visually appealing and 
+                        functioning websites. At The University of Texas at Arlington, I am now pursuing 
+                        a Bachelor of Science in Computer Science. I am currently a freelance developer 
+                        who is always searching for new challenges.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
@@ -81,8 +81,10 @@
 
                     <div class="tab-contents" id="Certifications">
                         <ul>
-                            <li><span>AWS (Amazon Web Services)</span><br>Cloud Practitioner</li>
-                            <li><span>Kodekloud</span><br>Kubernetes Course</li>
+                            <li><span>AWS (Amazon Web Services)</span><br>Cloud Practitioner<br><a href="https://www.credly.com/badges/e876ca2a-58f7-4567-8f9c-233200e95fbd/linked_in_profile">View certificate</a>
+                            </li>
+                            <li><span>Kodekloud</span><br>Kubernetes Course<br><a href="https://kodekloud.com/certificate-verification/2D0D3B86CEB9-2DFF899B6C84-2D0B1CE2A46B/">View certificate</a>
+                            </li>
                         </ul>
                     </div>
 
