--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>University of Texas at Dallas</span><br>Bachelor's Degree in Computer Science</li>
+                            <li><span>University of Texas at Arlington</span><br>Bachelor's Degree in Computer Science</li>
                         </ul>
                     </div>
 
