changed twitter's icon

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <div class="social-icons">
-                        <a href="https://twitter.com/MithaniZaineel"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://twitter.com/MithaniZaineel"><i class="fa-brands fa-x-twitter"></i></i></a>
                         <a href="https://www.instagram.com/zaineelmithani/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/zaineel-mithani-19588025b/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/zaineel"><i class="fa-brands fa-github"></i></a>
