--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <li><span>Database Management</span><br>MySQL • MongoDB • Firebase</li>
                             <li><span>Mobile Development</span><br>React Native • SwiftUI • Flutter</li>
                             <li><span>AI Development</span><br>TensorFlow • Keras • PyTorch</li>
-                            <li><span>Other</span><br>Git • GitHub • Replit • Heroku • Netlify • AWS • Azure<br>Kubernetes • Roboflow • Respell</li>
+                            <li><span>Other</span><br>Git • GitHub • Replit • Heroku • Netlify • AWS • Azure<br>Kubernetes • Roboflow • Respell • Twilio </li>
                         </ul>
                     </div>
 
