--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <a href="https://github.com/zaineel"><i class="fa-brands fa-github"></i></a>
                     </div>
                     <!--download tag is automatically download the file upon clicking -->
-                    <a href="../../../RESUME/Main/Zaineel Mithani_U.pdf" download class="btn btn2">Download Résumé</a>
+                    <a href="/assets/images/Zaineel Mithani_U.pdf" download class="btn btn2">Download Résumé</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
