--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
             <h1 class="sub-title ">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/zaineelmithani.github.io/assets/images/work-1.png">
+                    <img src="/zaineelmithani.github.io/assets/images/gallery-2.jpg">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>This website is a concept for a new social media app.</p>
-                        <a href='#'><i class="fa-solid fa-link"></i></a>
+                        <h3>Load-N-Save</h3>
+                        <p>Effortlessly tackle lengthy reports with our web app! Upload a data file, and our application can answer your queries. Save time, master content in seconds!.</p>
+                        <a href='https://virajsabhaya23-hackuta-2023-load-n-askapp-eryvys.streamlit.app/'><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
 
                 <div class="work">
-                    <img src="/zaineelmithani.github.io/assets/images/work-2.png">
+                    <img src="/zaineelmithani.github.io/assets/images/original.jpg">
                     <div class="layer">
-                        <h3>Music App</h3>
-                        <p>This website is a concept for a new music app.</p>
+                        <h3>Intelli-Fridge</h3>
+                        <p>A tool that tackles food waste by suggesting meals based on what's in your fridge.</p>
                         <a href='#'><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
