--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title ">About Me</h1>
-                    <p>I am a full-stack developer who enjoys creating visually appealing and 
-                        functioning websites. At The University of Texas at Arlington, I am now pursuing 
-                        a Bachelor of Science in Computer Science. I am currently a freelance developer 
-                        who is always searching for new challenges.</p>
+                    <p>I am a full-stack developer who enjoys creating visually appealing and
+                        functioning websites. At the University of Texas at Arlington, I am now pursuing 
+                        a Bachelor of Science in Computer Science. 
+                        I am currently a full-stack developer at ACM UTA and am always 
+                        looking for new challenges.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
@@ -66,7 +67,7 @@
 
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Freelance Web Developer</span><br>2021 - Present</li>
+                            <li><span>ACM UTA</span><br>Full-Stack Developer<br>Sept. 2023 - Present</li>
                             <li><span>Freelance Mobile App Developer</span><br>2021 - Present</li>
                             <li><span>Freelance Database Manager</span><br>2021 - Present</li>
                             <li><span>Freelance AI Developer</span><br>2021 - Present</li>
