--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <a href="https://github.com/zaineel"><i class="fa-brands fa-github"></i></a>
                     </div>
                     <!--download tag is automatically download the file upon clicking -->
-                    <a href="/assets/images/Zaineel Mithani_U.pdf" download class="btn btn2">Download Résumé</a>
+                    <a href="https://drive.google.com/file/d/1fabO_m8db5Y7x-bi-9KDMibeOjtC6Zy1/view?usp=sharing" download class="btn btn2">View Résumé</a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet">
