--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Personal Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/162388e7b6.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <!-- Header Section -->
     <div id="header">
-        <div class="container">
+        <div class="container revealable">
             <nav>
                 <img src="/zaineelmithani.github.io/assets/images/logo.PNG" class="logo">
                 <ul id="sidemenu">
@@ -34,7 +35,7 @@
 
     <!-- About Section -->
     <div id="about">
-        <div class="container">
+        <div class="container revealable">
             <div class="row">
                 <div class="about-col-1">
                     <img src="/zaineelmithani.github.io/assets/images/IMG_3173.jpg">
@@ -98,7 +99,7 @@
 
     <!-- Services Section -->
     <div id="services">
-        <div class="container">
+        <div class="container revealable">
             <h1 class="sub-title ">My Services</h1>
             <div class="services-list">
                 <div>
@@ -148,7 +149,7 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-        <div class="container">
+        <div class="container revealable">
             <h1 class="sub-title ">My Work</h1>
             <div class="work-list">
                 <div class="work">
@@ -184,7 +185,7 @@
 
     <!-- Contact Section -->
     <div id="contact">
-        <div class="container">
+        <div class="container revealable">
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
@@ -212,6 +213,8 @@
             <p>&copy; 2023 Zaineel Mithani. All rights reserved.</p>
         </div>
     </div>
+
+    <script src="index.js"></script>
 
     <script>
         var tabLinks = document.getElementsByClassName("tab-links");
