--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Header Section -->
     <div id="header">
-        <div class="container revealable">
+        <div class="container">
             <nav>
                 <img src="/zaineelmithani.github.io/assets/images/logo.PNG" class="logo">
                 <ul id="sidemenu">
@@ -35,7 +35,7 @@
 
     <!-- About Section -->
     <div id="about">
-        <div class="container revealable">
+        <div class="container">
             <div class="row">
                 <div class="about-col-1">
                     <img src="/zaineelmithani.github.io/assets/images/IMG_3173.jpg">
@@ -99,7 +99,7 @@
 
     <!-- Services Section -->
     <div id="services">
-        <div class="container revealable">
+        <div class="container">
             <h1 class="sub-title ">My Services</h1>
             <div class="services-list">
                 <div>
@@ -149,7 +149,7 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-        <div class="container revealable">
+        <div class="container">
             <h1 class="sub-title ">My Work</h1>
             <div class="work-list">
                 <div class="work">
@@ -185,7 +185,7 @@
 
     <!-- Contact Section -->
     <div id="contact">
-        <div class="container revealable">
+        <div class="container">
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
@@ -213,8 +213,6 @@
             <p>&copy; 2023 Zaineel Mithani. All rights reserved.</p>
         </div>
     </div>
-
-    <script src="index.js"></script>
 
     <script>
         var tabLinks = document.getElementsByClassName("tab-links");
