--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- About Section -->
     <div id="about">
-        <div class="container">
+        <div class="container revealable">
             <div class="row">
                 <div class="about-col-1">
                     <img src="/zaineelmithani.github.io/assets/images/IMG_3173.jpg">
@@ -98,7 +98,7 @@
 
     <!-- Services Section -->
     <div id="services">
-        <div class="container">
+        <div class="container revealable">
             <h1 class="sub-title ">My Services</h1>
             <div class="services-list">
                 <div>
@@ -148,7 +148,7 @@
 
     <!-- Portfolio Section -->
     <div id="portfolio">
-        <div class="container">
+        <div class="container revealable">
             <h1 class="sub-title ">My Work</h1>
             <div class="work-list">
                 <div class="work">
@@ -184,7 +184,7 @@
 
     <!-- Contact Section -->
     <div id="contact">
-        <div class="container">
+        <div class="container revealable">
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
@@ -260,6 +260,8 @@
             sidemenu.style.right = "-200px";
         }
     </script>
+
+    <script src="index.js"></script>
 
 </body>
 </html>
