--- a/index.html
+++ b/index.html
@@ -82,12 +82,10 @@
 
                     <div class="tab-contents" id="Certifications">
                         <ul>
-                            <li><span>AWS (Amazon Web Services)</span><br>Cloud Practitioner<br><a href="https://www.credly.com/badges/e876ca2a-58f7-4567-8f9c-233200e95fbd/linked_in_profile">View certificate</a>
-                            </li>
-                            <li><span>CodePath</span><br>Intro to Software Engineering<br><a href="https://drive.google.com/file/d/1UUo4b3AKdbyU7Gn9lpuwYATITjukWQUF/view?usp=share_link">View certificate</a>
-                            </li>
-                            <li><span>Kodekloud</span><br>Kubernetes Course<br><a href="https://kodekloud.com/certificate-verification/2D0D3B86CEB9-2DFF899B6C84-2D0B1CE2A46B/">View certificate</a>
-                            </li>
+                            <li><span>AWS (Amazon Web Services)</span><br>Cloud Practitioner<br><a href="https://www.credly.com/badges/e876ca2a-58f7-4567-8f9c-233200e95fbd/linked_in_profile">View certificate</a></li>
+                            <li><span>CodePath</span><br>Intro to Software Engineering<br><a href="https://drive.google.com/file/d/1UUo4b3AKdbyU7Gn9lpuwYATITjukWQUF/view?usp=share_link">View certificate</a></li>
+                            <li><span>CodePath</span><br>Intro to Web Development<br><a href="https://drive.google.com/file/d/1sO6KPKliZ67xAgdh0WzYRmaH3HB51Y5z/view?usp=sharing">View certificate</a></li>
+                            <li><span>Kodekloud</span><br>Kubernetes Course<br><a href="https://kodekloud.com/certificate-verification/2D0D3B86CEB9-2DFF899B6C84-2D0B1CE2A46B/">View certificate</a></li>
                         </ul>
                     </div>
 
