--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>ACM UTA</span><br>Full-Stack Developer<br>Sept. 2023 - Present</li>
-                            <li><span>Freelance Mobile App Developer</span><br>2021 - Present</li>
-                            <li><span>Freelance Database Manager</span><br>2021 - Present</li>
+                            <li><span>Academic Success Center UTA</span><br>Peer-Led Team Learning (PLTL) Leader<br>Jan. 2024 - Present</li>
                             <li><span>Freelance AI Developer</span><br>2021 - Present</li>
                         </ul>
                     </div>
