--- a/index.html
+++ b/index.html
@@ -49,10 +49,14 @@
             <h1 class="sub-title">About Me</h1>
             <p>
               I am a full-stack developer who enjoys creating visually appealing
-              and functioning websites. At the University of Texas at Arlington,
-              I am now pursuing a Bachelor of Science in Computer Science. I am
-              currently a full-stack developer at ACM UTA and am always looking
-              for new challenges.
+              and functional websites. At the University of Texas at Arlington,
+              I am now pursuing a Bachelor of Science in Computer Science and
+              minor in Maths. I am currently a full-stack developer at ACM UTA
+              and a SWE Fellow at Headstarter AI. I am also a Peer-Led Team
+              Learning (PLTL) Leader at the Academic Success Center UTA. I have
+              experience in back-end development, front-end development,
+              database management, mobile development, and AI development. I am
+              always looking for new challenges.
             </p>
 
             <div class="tab-titles">
@@ -93,14 +97,17 @@
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>ACM UTA</span><br />Full-Stack Developer<br />Sept. 2023
-                  - Present
+                  <span>Headstarter AI</span><br />SWE Fellow <br />July 2024 -
+                  Present
                 </li>
                 <li>
                   <span>Academic Success Center UTA</span><br />Peer-Led Team
                   Learning (PLTL) Leader<br />Jan. 2024 - Present
                 </li>
-                <li><span>Freelance AI Developer</span><br />2021 - Present</li>
+                <li>
+                  <span>ACM UTA</span><br />Full-Stack Developer<br />Sept. 2023
+                  - Present
+                </li>
               </ul>
             </div>
 
@@ -108,7 +115,7 @@
               <ul>
                 <li>
                   <span>University of Texas at Arlington</span><br />Bachelor's
-                  Degree in Computer Science
+                  in Computer Science & minor in Maths<br />Jan. 2023 - May 2026
                 </li>
               </ul>
             </div>
@@ -215,35 +222,106 @@
       </div>
     </div>
 
-    <!-- Portfolio Section -->
+    <!-----Portfolio---->
+
     <div id="portfolio">
-      <div class="container revealable">
-        <h1 class="sub-title">My Work</h1>
+      <div class="container">
+        <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
           <div class="work">
-            <img src="/zaineelmithani.github.io/assets/images/work-1.png" />
+            <img src="images/wordle.png" class="portfolio-image" />
             <div class="layer">
-              <h3>Social Media App</h3>
-              <p>This website is a concept for a new social media app.</p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <h3>Food Vision Model</h3>
+              <p>
+                ● Developed a Python-based food vision model, accurately
+                classifying 101 food categories with 90% accuracy, enhancing
+                user experience and food identification. <br />
+                ● Engineered a Convolutional Neural Network (CNN) using PyTorch,
+                optimizing model performance and ensuring reliable food
+                classification. <br />
+                ● Implemented a user-friendly web interface using Streamlit,
+                promoting accessibility and user engagement.
+              </p>
+              <a href="https://huggingface.co/zain088" target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
-
           <div class="work">
-            <img src="/zaineelmithani.github.io/assets/images/work-2.png" />
+            <img src="images/pricetracker.png" class="portfolio-image" />
             <div class="layer">
-              <h3>Music App</h3>
-              <p>This website is a concept for a new music app.</p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <h3>Twitter API ETL pipeline</h3>
+              <p>
+                ● Engineered an ETL pipeline using Python and the Twitter API,
+                extracting, transforming, and loading data from Twitter for
+                real-time analysis. <br />
+                ● Implemented a data cleaning process using Pandas, ensuring
+                data quality and consistency for accurate analysis. <br />
+                ● Developed a data visualization dashboard using Matplotlib and
+                Seaborn, providing users with actionable insights for informed
+                decision-making.
+              </p>
+              <a href="#" target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
-
           <div class="work">
-            <img src="/zaineelmithani.github.io/assets/images/work-3.png" />
+            <img src="images/math2.jpeg" class="portfolio-image" />
             <div class="layer">
-              <h3>Online Shopping App</h3>
-              <p>This website is a concept for a new online shopping app.</p>
-              <a href="#"><i class="fa-solid fa-link"></i></a>
+              <h3>RESTful API Template</h3>
+              <p>
+                ● Designed a RESTful API template using Node.js and Express.js,
+                providing developers with a scalable and efficient solution for
+                building APIs. <br />
+                ● Implemented CRUD operations for user management, enabling
+                developers to create, read, update, and delete user data. <br />
+                ● Used MongoDB Atlas for database management, ensuring data
+                integrity and security for user information.
+              </p>
+              <a
+                href="https://github.com/zaineel/nodeJS_mongoose"
+                target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/solar.jpeg" class="portfolio-image" />
+            <div class="layer">
+              <h3>Intelli-Fridge</h3>
+              <p>
+                ● For our Deep Learning model, we used Roboflow to generate a
+                big labeled dataset. Then we use Amazon SageMaker and
+                Ultralytics' YOLOv5 to train the model. We used Respell's
+                integration of OpenAI's GPT-3 and DallE-2 to generate recipes
+                and enticing thumbnails for what the meals could look like. We
+                created designs using Figma, then built the mobile app using
+                React Native and Expo. The app calls on a custom API deployed on
+                Railway that integrates all the services together. <br />
+              </p>
+              <a
+                href="https://devpost.com/software/intelli-fridge"
+                target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/quiz.jpeg" class="portfolio-image" />
+            <div class="layer">
+              <h3>Load-N-Ask</h3>
+              <p>
+                ● Our web application, powered by OpenAI, revolutionizes
+                document handling. Simply upload your PDF files. It splits the
+                text into small chunks and generates concise summaries on the
+                fly. But that's not all - it's also a virtual assistant! You can
+                ask it questions about the content, and it provides instant
+                answers.
+              </p>
+              <a href="https://devpost.com/software/load-n-save" target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
         </div>
@@ -273,6 +351,9 @@
               ></a>
               <a href="https://github.com/zaineel"
                 ><i class="fa-brands fa-github"></i
+              ></a>
+              <a href="https://discord.com/channels/@me"
+                ><i class="fa-brands fa-discord"></i
               ></a>
             </div>
             <!--download tag is automatically download the file upon clicking -->
