--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
           <div class="work">
-            <img src="images/wordle.png" class="portfolio-image" />
+            <img
+              src="/zaineelmithani.github.io/assets/images/Screenshot 2024-07-24 at 12.51.34 PM.png"
+              class="portfolio-image"
+            />
             <div class="layer">
               <h3>Food Vision Model</h3>
               <p>
@@ -248,7 +251,10 @@
             </div>
           </div>
           <div class="work">
-            <img src="images/pricetracker.png" class="portfolio-image" />
+            <img
+              src="/zaineelmithani.github.io/assets/images/mAjDOxl.png"
+              class="portfolio-image"
+            />
             <div class="layer">
               <h3>Twitter API ETL pipeline</h3>
               <p>
@@ -267,7 +273,10 @@
             </div>
           </div>
           <div class="work">
-            <img src="images/math2.jpeg" class="portfolio-image" />
+            <img
+              src="/zaineelmithani.github.io/assets/images/1*OIQ2NqlSn_w-ryZxj6BWUw.png"
+              class="portfolio-image"
+            />
             <div class="layer">
               <h3>RESTful API Template</h3>
               <p>
@@ -287,7 +296,10 @@
             </div>
           </div>
           <div class="work">
-            <img src="images/solar.jpeg" class="portfolio-image" />
+            <img
+              src="/zaineelmithani.github.io/assets/images/gallery1.jpg"
+              class="portfolio-image"
+            />
             <div class="layer">
               <h3>Intelli-Fridge</h3>
               <p>
@@ -308,7 +320,10 @@
             </div>
           </div>
           <div class="work">
-            <img src="images/quiz.jpeg" class="portfolio-image" />
+            <img
+              src="/zaineelmithani.github.io/assets/images/gallery.jpg"
+              class="portfolio-image"
+            />
             <div class="layer">
               <h3>Load-N-Ask</h3>
               <p>
