--- a/index.html
+++ b/index.html
@@ -242,8 +242,6 @@
                 ● Engineered a Convolutional Neural Network (CNN) using PyTorch,
                 optimizing model performance and ensuring reliable food
                 classification. <br />
-                ● Implemented a user-friendly web interface using Streamlit,
-                promoting accessibility and user engagement.
               </p>
               <a href="https://huggingface.co/zain088" target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
@@ -263,11 +261,10 @@
                 real-time analysis. <br />
                 ● Implemented a data cleaning process using Pandas, ensuring
                 data quality and consistency for accurate analysis. <br />
-                ● Developed a data visualization dashboard using Matplotlib and
-                Seaborn, providing users with actionable insights for informed
-                decision-making.
               </p>
-              <a href="#" target="_blank"
+              <a
+                href="https://github.com/zaineel/airflow_ETL?tab=readme-ov-file"
+                target="_blank"
                 ><i class="fa-solid fa-arrow-up-right-from-square"></i
               ></a>
             </div>
