--- a/index.html
+++ b/index.html
@@ -223,125 +223,134 @@
     </div>
 
     <!-----Portfolio---->
-
     <div id="portfolio">
       <div class="container">
         <h1 class="sub-title">My Projects</h1>
-        <div class="work-list">
-          <div class="work">
-            <img
-              src="/zaineelmithani.github.io/assets/images/Screenshot 2024-07-24 at 12.51.34 PM.png"
-              class="portfolio-image"
-            />
-            <div class="layer">
-              <h3>Food Vision Model</h3>
-              <p>
-                ● Developed a Python-based food vision model, accurately
-                classifying 101 food categories with 90% accuracy, enhancing
-                user experience and food identification. <br />
-                ● Engineered a Convolutional Neural Network (CNN) using PyTorch,
-                optimizing model performance and ensuring reliable food
-                classification. <br />
-              </p>
-              <a href="https://huggingface.co/zain088" target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
+        <div class="work-list scroll-container">
+          <div class="scroll-content">
+            <div class="work">
+              <img
+                src="/zaineelmithani.github.io/assets/images/Screenshot 2024-07-24 at 12.51.34 PM.png"
+                class="portfolio-image"
+              />
+              <div class="layer">
+                <h3>Food Vision Model</h3>
+                <p>
+                  ● Developed a Python-based food vision model, accurately
+                  classifying 101 food categories with 90% accuracy, enhancing
+                  user experience and food identification. <br />
+                  ● Engineered a Convolutional Neural Network (CNN) using
+                  PyTorch, optimizing model performance and ensuring reliable
+                  food classification. <br />
+                </p>
+                <a href="https://huggingface.co/zain088" target="_blank">
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="work">
-            <img
-              src="/zaineelmithani.github.io/assets/images/mAjDOxl.png"
-              class="portfolio-image"
-            />
-            <div class="layer">
-              <h3>Twitter API ETL pipeline</h3>
-              <p>
-                ● Engineered an ETL pipeline using Python and the Twitter API,
-                extracting, transforming, and loading data from Twitter for
-                real-time analysis. <br />
-                ● Implemented a data cleaning process using Pandas, ensuring
-                data quality and consistency for accurate analysis. <br />
-              </p>
-              <a
-                href="https://github.com/zaineel/airflow_ETL?tab=readme-ov-file"
-                target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
+            <div class="work">
+              <img
+                src="/zaineelmithani.github.io/assets/images/mAjDOxl.png"
+                class="portfolio-image"
+              />
+              <div class="layer">
+                <h3>Twitter API ETL pipeline</h3>
+                <p>
+                  ● Engineered an ETL pipeline using Python and the Twitter API,
+                  extracting, transforming, and loading data from Twitter for
+                  real-time analysis. <br />
+                  ● Implemented a data cleaning process using Pandas, ensuring
+                  data quality and consistency for accurate analysis. <br />
+                </p>
+                <a
+                  href="https://github.com/zaineel/airflow_ETL?tab=readme-ov-file"
+                  target="_blank"
+                >
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="work">
-            <img
-              src="/zaineelmithani.github.io/assets/images/1*OIQ2NqlSn_w-ryZxj6BWUw.png"
-              class="portfolio-image"
-            />
-            <div class="layer">
-              <h3>RESTful API Template</h3>
-              <p>
-                ● Designed a RESTful API template using Node.js and Express.js,
-                providing developers with a scalable and efficient solution for
-                building APIs. <br />
-                ● Implemented CRUD operations for user management, enabling
-                developers to create, read, update, and delete user data. <br />
-                ● Used MongoDB Atlas for database management, ensuring data
-                integrity and security for user information.
-              </p>
-              <a
-                href="https://github.com/zaineel/nodeJS_mongoose"
-                target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
+            <div class="work">
+              <img
+                src="/zaineelmithani.github.io/assets/images/1*OIQ2NqlSn_w-ryZxj6BWUw.png"
+                class="portfolio-image"
+              />
+              <div class="layer">
+                <h3>RESTful API Template</h3>
+                <p>
+                  ● Designed a RESTful API template using Node.js and
+                  Express.js, providing developers with a scalable and efficient
+                  solution for building APIs. <br />
+                  ● Implemented CRUD operations for user management, enabling
+                  developers to create, read, update, and delete user data.
+                  <br />
+                  ● Used MongoDB Atlas for database management, ensuring data
+                  integrity and security for user information.
+                </p>
+                <a
+                  href="https://github.com/zaineel/nodeJS_mongoose"
+                  target="_blank"
+                >
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="work">
-            <img
-              src="/zaineelmithani.github.io/assets/images/gallery1.jpg"
-              class="portfolio-image"
-            />
-            <div class="layer">
-              <h3>Intelli-Fridge</h3>
-              <p>
-                ● For our Deep Learning model, we used Roboflow to generate a
-                big labeled dataset. Then we use Amazon SageMaker and
-                Ultralytics' YOLOv5 to train the model. We used Respell's
-                integration of OpenAI's GPT-3 and DallE-2 to generate recipes
-                and enticing thumbnails for what the meals could look like. We
-                created designs using Figma, then built the mobile app using
-                React Native and Expo. The app calls on a custom API deployed on
-                Railway that integrates all the services together. <br />
-              </p>
-              <a
-                href="https://devpost.com/software/intelli-fridge"
-                target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
+            <div class="work">
+              <img
+                src="/zaineelmithani.github.io/assets/images/gallery1.jpg"
+                class="portfolio-image"
+              />
+              <div class="layer">
+                <h3>Intelli-Fridge</h3>
+                <p>
+                  ● For our Deep Learning model, we used Roboflow to generate a
+                  big labeled dataset. Then we use Amazon SageMaker and
+                  Ultralytics' YOLOv5 to train the model. We used Respell's
+                  integration of OpenAI's GPT-3 and DallE-2 to generate recipes
+                  and enticing thumbnails for what the meals could look like. We
+                  created designs using Figma, then built the mobile app using
+                  React Native and Expo. The app calls on a custom API deployed
+                  on Railway that integrates all the services together. <br />
+                </p>
+                <a
+                  href="https://devpost.com/software/intelli-fridge"
+                  target="_blank"
+                >
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="work">
-            <img
-              src="/zaineelmithani.github.io/assets/images/gallery.jpg"
-              class="portfolio-image"
-            />
-            <div class="layer">
-              <h3>Load-N-Ask</h3>
-              <p>
-                ● Our web application, powered by OpenAI, revolutionizes
-                document handling. Simply upload your PDF files. It splits the
-                text into small chunks and generates concise summaries on the
-                fly. But that's not all - it's also a virtual assistant! You can
-                ask it questions about the content, and it provides instant
-                answers.
-              </p>
-              <a href="https://devpost.com/software/load-n-save" target="_blank"
-                ><i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
+            <div class="work">
+              <img
+                src="/zaineelmithani.github.io/assets/images/gallery.jpg"
+                class="portfolio-image"
+              />
+              <div class="layer">
+                <h3>Load-N-Ask</h3>
+                <p>
+                  ● Our web application, powered by OpenAI, revolutionizes
+                  document handling. Simply upload your PDF files. It splits the
+                  text into small chunks and generates concise summaries on the
+                  fly. But that's not all - it's also a virtual assistant! You
+                  can ask it questions about the content, and it provides
+                  instant answers.
+                </p>
+                <a
+                  href="https://devpost.com/software/load-n-save"
+                  target="_blank"
+                >
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </a>
+              </div>
             </div>
           </div>
         </div>
         <a
           href="https://devpost.com/zaineel-mithani?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"
           class="btn"
-          >View More</a
         >
+          View More
+        </a>
       </div>
     </div>
 
@@ -445,6 +454,57 @@
       function closeMenu() {
         sidemenu.style.right = "-200px";
       }
+    </script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const scrollContainer = document.querySelector(".scroll-container");
+
+        let isScrolling;
+        let autoScroll;
+        let scrollDirection = 1;
+
+        const startAutoScroll = () => {
+          autoScroll = setInterval(() => {
+            const maxScrollLeft =
+              scrollContainer.scrollWidth - scrollContainer.clientWidth;
+            if (scrollContainer.scrollLeft >= maxScrollLeft) {
+              scrollDirection = -1;
+            } else if (scrollContainer.scrollLeft <= 0) {
+              scrollDirection = 1;
+            }
+            scrollContainer.scrollLeft += scrollDirection; // Adjust scroll speed here
+          }, 10); // Adjust interval for smoother or faster scrolling
+        };
+
+        const stopAutoScroll = () => {
+          clearInterval(autoScroll);
+        };
+
+        const stopAutoScrollOnInteraction = () => {
+          stopAutoScroll();
+          clearTimeout(isScrolling);
+
+          // Set a timeout to restart auto-scroll if no interaction happens within 5 seconds
+          isScrolling = setTimeout(() => {
+            startAutoScroll();
+          }, 5000);
+        };
+
+        // Start auto-scrolling initially
+        startAutoScroll();
+
+        // Listen for user interactions
+        scrollContainer.addEventListener("wheel", stopAutoScrollOnInteraction);
+        scrollContainer.addEventListener(
+          "touchstart",
+          stopAutoScrollOnInteraction
+        );
+        scrollContainer.addEventListener(
+          "mousedown",
+          stopAutoScrollOnInteraction
+        );
+      });
     </script>
 
     <script src="index.js"></script>
